<resources>
    <string name="app_name">MiNuS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="michael_jordan">Michael Jordan</string>
    <string name="user_email">mickyJordan63@gmail.com</string>
    <string name="dnevni_pregled">Dnevni pregled</string>
    <string name="mesecni_pregled">Mesečni pregled</string>
    <string name="godsnji_pregled">Godišnji pregled</string>
    <string name="izvetaj_potrosnje">Ostale opcije</string>
    <string name="podesavanja">Podešavanja</string>
    <string name="odjavi_se">Odjavi se</string>
    <string name="uloguj_se">Uloguj se</string>
    <string name="registruj_se">Registruj se</string>
    <string name="registruj_se_besplatno">Registruj se besplatno.</string>
    <string name="vase_ime">Vaše ime</string>
    <string name="vase_prezime">Vaše prezime</string>
    <string name="vase_korisnicko_ime">Vaše korisničko ime</string>
    <string name="lozinka_reg">Lozinka (barem 7 karaktera)</string>
    <string name="email_reg">Vaša e-mail adresa</string>
    <string name="title_activity_register_activiti">RegisterActiviti</string>
    <string name="artikal">Artikal</string>
    <string name="kolicina">Količina</string>
    <string name="cena">Cena</string>
    <string name="ukupna_cena">Ukupna cena:</string>
    <string name="dobrodosli">Dobrodošli</string>
    <string name="ucitavanje">Učitavanje u toku...</string>
    <string name="title_item_detail">Item detail</string>
    <string name="datum_kupovine">Datum kupovine:</string>
    <string name="pretraga_racuna">Pretraga računa...</string>
    <string name="novi_artikl">Novi artikal</string>
    <string name="naziv_artikla">Naziv artikla</string>
    <string name="kolicina_artikla">Količina</string>
    <string name="cena_artikla">Cena artikla</string>
    <string name="svi_racuni">Svi računi</string>
    <string name="dodaj">Dodaj</string>
    <string name="ponisti">Poništi</string>
    <string name="title_activity_add_idem">AddIdemActivity</string>
    <string name="title_activity_add_bill">AddBillActivity</string>
    <string name="novi_racun">Novi račun</string>
    <string name="naziv_racun">Naziv računa</string>
    <string name="mesto_kupovine">Mesto kupovine</string>
    <string name="datum">Datum:</string>
    <string name="dodaj_artikal">Dodaj artikal</string>
    <string name="dodaj_racun">Dodaj račun</string>
    <string name="date_selected"></string>
    <string name="nisi_clan">Nisi clan?</string>
    <string name="ok">U redu</string>
    <string name="cancel">Nazad</string>
    <string name="mesecni_grafik">Mesečni grafik</string>
    <string name="title_activity_cash_control">CashControlActivity</string>
    <string name="regulacija_budzeta">Regulacija budžeta</string>
    <string name="dnevni_budzet">Dnevni budžet</string>
    <string name="mesecni_budzet">Mesečni budžet</string>
    <string name="settings_user">Podešavanje profila</string>
    <string name="settings_user_detail">Promena korisnikovih informacija.</string>
    <string name="settings_font">Podešavanje fonta</string>
    <string name="settings_color">Promena pozadine</string>
    <string name="settings_notification">Notifikacije</string>
    <string name="default_font">Times New Roman</string>
    <string name="settings">Podešavanja</string>
    <string name="settings_user_profile">Podešavanje profila</string>
    <string name="default_background">default</string>
    <string name="change_password">Promena lozinke</string>
    <string name="save_user_info">Potvrdi promene</string>
    <string name="izdavac_racuna">Izdavač računa</string>
    <string name="ime">Ime</string>
    <string name="prezime">Prezime</string>
    <string name="korisnicko_ime">Korisničko ime</string>
    <string name="e_mail">E-mail</string>
    <string name="lozinka">Lozinka</string>
    <string name="dnevniBudzet">Vaš dnevni budžet:</string>
</resources>
