<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/main_background"
    tools:context="android.com.minus.activities.CashControlActivity">

    <TextView
        android:id="@+id/regulacija_budzeta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/regulacija_budzeta"
        android:textColor="@color/primary_text"
        android:layout_centerHorizontal="true"
        android:textSize="35dp"
        android:paddingBottom="50dp"
        android:paddingTop="40dp"/>

    <EditText
        android:id="@+id/dnevni_budzet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/regulacija_budzeta"
        android:inputType="numberDecimal"
        android:hint="@string/dnevni_budzet"
        android:layout_centerHorizontal="true"
        android:width="230dp"
        android:paddingBottom="30dp"/>

    <EditText
        android:id="@+id/mesecki_budzet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dnevni_budzet"
        android:inputType="numberDecimal"
        android:hint="@string/mesecni_budzet"
        android:layout_centerHorizontal="true"
        android:width="230dp"
        android:paddingBottom="30dp"/>

    <View
        android:id="@+id/linija"
        android:layout_below="@id/mesecki_budzet"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="#000000"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/linija"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp">
        <Button
            android:id="@+id/dodaj_budzet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dodaj"
            android:layout_alignParentLeft="true"
            android:layout_marginRight="10dp"/>


        <Button
            android:id="@+id/ponisti_budzet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ponisti"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>

</RelativeLayout>
