<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/login_background">

    <TextView
        android:id="@+id/billIssuer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="Bill issuer"
        android:textSize="18dp"
        android:textColor="@color/primary_text"/>

    <TextView
        android:id="@+id/billDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/billIssuer"
        android:layout_centerHorizontal="true"
        android:textSize="14dp"
        android:textColor="@color/primary_text"
        android:layout_marginTop="19dp"
        android:text="Bill date" />

    <View
        android:id="@+id/hr1"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/billDate"
        android:background="#212121"/>

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/tableLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hr1"
        android:shrinkColumns="*"
        android:stretchColumns="*"
        android:layout_marginTop="20dp">

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/textView9"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/artikal"
                android:layout_span="3" />

            <TextView
                android:id="@+id/textView1"
                android:textStyle="bold"
                android:textSize="18dp"
                android:text="@string/kolicina"
                android:layout_span="1" />

            <TextView
                android:id="@+id/textView2"
                android:textStyle="bold"
                android:textSize="18dp"
                android:text="@string/cena"
                android:layout_span="2" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="@drawable/table_border">

            <TextView
                android:id="@+id/TextView04"
                android:text="das"
                android:textColor="@color/primary_text"/>
            <TextView
                android:id="@+id/TextView04"
                android:text="Feb 7"
                android:textColor="@color/primary_text"/>
            <TextView
                android:id="@+id/TextView03"
                android:text="Feb 8"
                android:textColor="@color/primary_text"/>
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/textView66"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14dp"
        android:text="@string/ukupna_cena"
        android:textColor="@color/primary_text"
        android:layout_below="@+id/tableLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"/>

    <TextView
        android:id="@+id/textView67"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14dp"
        android:text="676"
        android:textColor="@color/primary_text"
        android:paddingLeft="140dp"
        android:layout_below="@+id/tableLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"/>


</RelativeLayout>